<?xml version="1.0" encoding="utf-8"?>
<com.qingchengfit.fitcoach.fragment.LoginView
    android:id="@+id/loginview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paper_common_padding">

    <RelativeLayout
        android:id="@+id/phone_out_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_phone_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:inputType="phone"
                android:text="13601218507"
                android:maxLength="11"
                />

        </android.support.design.widget.TextInputLayout>
        <TextView
            android:id="@+id/login_getcode_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_getcode"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawablePadding="5dp"
            />
    </RelativeLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_phone_verity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_out_layout"
        android:padding="0dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:text="123456"
            />

    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_phone_verity"
        android:orientation="horizontal"
        >

        <ToggleButton
            android:id="@+id/forgetpw_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/paper_item_height"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:text="@string/login_forgotpw"
            android:textOff="验证码登录"
            android:textOn="密码登陆"
            >
        </ToggleButton>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/paper_item_height"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:text="@string/login_btn_lable">
        </Button>
    </LinearLayout>


    <Button
        android:id="@+id/goregiste_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/paper_item_height"
        android:layout_below="@id/login_btn"
        android:orientation="horizontal"
        android:text="@string/registe_btn_lable"
        android:visibility="gone"
        >
    </Button>


</com.qingchengfit.fitcoach.fragment.LoginView>