<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_pos_login"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    >

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:layout_marginTop="68dp"
      android:text="@string/login_title"
      android:textColor="@color/white"
      android:textSize="20dp"
      android:textStyle="bold"
      />

  <TextView
      android:id="@+id/tv_login_gym_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      tools:text="中美引力798店"
      style="@style/QcTextStyleLargeWarm"
      />


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:background="@color/pos_login_bg"
      android:layout_marginTop="65dp"
      android:gravity="center_vertical"
      android:paddingLeft="20dp"
      android:paddingRight="15dp"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vd_login_phone"
        />

    <include layout="@layout/divider_grey_vertical"
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>
    
    <AutoCompleteTextView
        android:id="@+id/edit_login_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="手机号"
        android:textColorHint="@color/text_warm"
        android:textSize="14sp"
        android:background="@color/transparent"
        android:layout_marginLeft="15dp"
        android:maxLines="1"
        android:inputType="number"
        android:textColor="@color/white"
        android:paddingTop="3dp"
        android:paddingBottom="5dp"
        android:gravity="center_vertical"
        />

    <TextView
        android:id="@+id/btn_get_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/login_get_code"
        style="@style/QcTextStyleSmallWarm"
        android:gravity="right"
        android:textColor="@color/colorPrimary"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:background="@color/pos_login_bg"
      android:layout_marginTop="13dp"
      android:gravity="center_vertical"
      android:paddingLeft="20dp"
      android:paddingRight="20dp"
      >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/vd_login_code"
        />

    <include layout="@layout/divider_grey_vertical"
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:id="@+id/edit_login_auth_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:hint="验证码"
        android:background="@color/transparent"
        android:layout_marginLeft="15dp"
        android:textColor="@color/white"
        android:maxLines="1"
        android:inputType="number"
        />


  </LinearLayout>

  <Button
      android:id="@+id/login_btn"
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:background="@drawable/bg_login_button"
      android:orientation="horizontal"
      android:textSize="@dimen/btn_font"
      android:text="@string/login_btn_confirm"
      android:layout_marginTop="52dp"
      />

  <TextView
      android:id="@+id/tv_btn_login_question"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/login_have_some_question"
      style="@style/QcTextStyleMediumWarm"
      android:layout_gravity="right"
      android:textColor="@color/white"
      android:layout_marginTop="20dp"
      android:paddingLeft="6dp"
      android:paddingTop="6dp"
      android:paddingBottom="6dp"
      />

</LinearLayout>