<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.qingchengfit.pos.main.MainActivity"
    android:id="@+id/frag_main"
    android:background="@color/colorPrimary"
    >

</FrameLayout>
