//package cn.qingchengfit.staffkit.views.login;
//
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//@LargeTest @RunWith(AndroidJUnit4.class) public class LoginActivityTest {
//
//    @Rule public ActivityTestRule<SplashActivity> mActivityTestRule = new ActivityTestRule<>(SplashActivity.class);
//
//    @Test public void loginActivityTest() {
//        //        ViewInteraction appCompatEditText = onView(
//        //                allOf(withClassName(is("android.support.v7.widget.AppCompatEditText")),
//        //                        withParent(allOf(withId(R.id.login_phone_num),
//        //                                withParent(withId(R.id.phone_out_layout)))),
//        //                        isDisplayed()));
//        //        appCompatEditText.perform(click());
//        //
//        //        ViewInteraction appCompatEditText2 = onView(
//        //                allOf(withClassName(is("android.support.v7.widget.AppCompatEditText")),
//        //                        withParent(allOf(withId(R.id.login_phone_num),
//        //                                withParent(withId(R.id.phone_out_layout)))),
//        //                        isDisplayed()));
//        //        appCompatEditText2.perform(replaceText("18618304202"));
//
//        //        ViewInteraction appCompatEditText3 = onView(
//        //                allOf(withClassName(is("android.support.v7.widget.AppCompatEditText")),
//        //                        withParent(withId(R.id.login_phone_verity)),
//        //                        isDisplayed()));
//        //        appCompatEditText3.perform(replaceText("admin123"));
//        //
//        //        ViewInteraction appCompatButton = onView(
//        //                allOf(withId(R.id.login_btn), withText("登录"), isDisplayed()));
//        //        appCompatButton.perform(click());
//
//    }
//}
